change the z-index of the nav-center to 2 to fix mouseover event over linkbtns

--- a/simple stripe submenu/main.css
+++ b/simple stripe submenu/main.css
@@ -166,6 +166,7 @@ body {
     display: grid;
     grid-template-columns: auto 1fr auto;
     place-items: center;
+    z-index: 2;
   }
   .nav-links {
     list-style-type: none;
